--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,8 @@
 
 body {
   font-family: 'Roboto', sans-serif !important;
+  background-color: var(--bg-color);
+  color: var(--font-color);
 }
 
 * {
