--- a/src/components/FrameList/FrameList.module.css
+++ b/src/components/FrameList/FrameList.module.css
@@ -8,4 +8,17 @@
   border-radius: var(--border-radius);
   height: 100%;
   width: 230px;
+  gap: 20px;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 2%;
+}
+
+.list {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
