--- a/src/components/FrameRules/FrameRules.module.css
+++ b/src/components/FrameRules/FrameRules.module.css
@@ -8,4 +8,11 @@
   border-radius: var(--border-radius);
   height: 100%;
   width: 590px;
+  gap: 20px;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 2%;
 }
