--- a/src/components/FrameList/FrameList.module.css
+++ b/src/components/FrameList/FrameList.module.css
@@ -15,10 +15,15 @@
   font-size: 20px;
   font-weight: 500;
   letter-spacing: 2%;
+  margin-bottom: 32px;
 }
 
 .list {
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
