--- a/src/components/custom/FrameBlock/FrameBlock.module.css
+++ b/src/components/custom/FrameBlock/FrameBlock.module.css
@@ -1,16 +1,23 @@
 .frame {
-  width: 150px;
-  height: 150px;
-  border: 2px solid var(--font-color);
+  max-width: 150px;
+  max-height: 150px;
+  width: 100%;
+  height: 100%;
+  border: 5px solid var(--font-color);
   border-radius: var(--border-radius);
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .image {
   object-fit: contain;
   width: 100%;
   min-height: 100%;
+}
+
+.active {
+  border: 5px solid var(--primary-color);
 }
