--- a/src/components/custom/FrameBlock/FrameBlock.module.css
+++ b/src/components/custom/FrameBlock/FrameBlock.module.css
@@ -10,6 +10,8 @@
   justify-content: center;
   overflow: hidden;
   cursor: pointer;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .image {
@@ -19,5 +21,9 @@
 }
 
 .active {
-  border: 5px solid var(--primary-color);
+  border: 5px solid var(--secondary-color);
+}
+
+.frame:hover {
+  outline: 4px solid rgba(255, 99, 71, 0.21);
 }
