--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -2,6 +2,6 @@
   --bg-color: #282828;
   --font-color: #fafafa;
   --primary-color: #0088ff;
-  --secondary-color: #ff5900;
+  --secondary-color: tomato;
   --border-radius: 15px;
 }
