--- a/src/components/custom/CropImage/CropImage.module.css
+++ b/src/components/custom/CropImage/CropImage.module.css
@@ -1,2 +1,31 @@
+.crop-container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 20px;
+  position: relative;
+}
+
 .crop-box {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 20px;
+  position: relative;
+}
+
+.crop {
+  margin: 0 auto;
+  border: 2px solid var(--bg-color);
+  background-color: #818181;
+}
+
+.box {
+  width: 250px;
+  height: 250px;
+  position: absolute;
+  border: 3px solid var(--secondary-color);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
