--- a/src/components/FramePreview/FramePreview.module.css
+++ b/src/components/FramePreview/FramePreview.module.css
@@ -3,10 +3,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5px;
   padding: 20px;
   border: 2px solid var(--font-color);
   border-radius: var(--border-radius);
   height: 420px;
   width: 870px;
   overflow: hidden;
+  grid-template-columns: 5% 30% 30% 30% 5%;
+  grid-template-rows: 5% 30% 30% 30% 5%;
+}
+
+.frame {
+  width: 100%;
+  height: 100%;
+  min-width: 75px;
+  min-height: 75px;
 }
