--- a/src/components/custom/SelectFrame/SelectFrame.module.css
+++ b/src/components/custom/SelectFrame/SelectFrame.module.css
@@ -17,6 +17,11 @@
   color: var(--font-color);
 }
 
+.form {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
 .list {
   margin-top: 30px;
   display: flex;
