--- a/src/components/custom/Logo/Logo.module.css
+++ b/src/components/custom/Logo/Logo.module.css
@@ -1,3 +1,19 @@
 .logo {
+  cursor: pointer;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.logo h1 {
+  font-size: 20px;
+}
+
+.icon {
+  font-size: 40px;
+}
+
+.logo:hover {
+  color: var(--secondary-color);
 }
