--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -3,17 +3,40 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 50px;
+  padding: 20px;
   border: 2px solid var(--font-color);
   border-radius: var(--border-radius);
   gap: 20px;
   margin: 5px;
   overflow: auto;
+}
+.canvas-container {
+  border: 1px solid var(--secondary-color);
   aspect-ratio: 1 / 1;
+  width: 80%;
+  overflow: scroll;
+  padding: 20px;
+  border-radius: 5px;
 }
 
 .canvas {
   aspect-ratio: 1 / 1;
   background: white;
-  margin: auto;
+}
+
+.container *::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background-color: red;
+}
+
+.container *::-webkit-scrollbar-thumb {
+  background-color: red;
+  border-radius: 5px;
+}
+
+.container *::-webkit-scrollbar-track {
+  background-color: red;
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
 }
