--- a/src/style/index.css
+++ b/src/style/index.css
@@ -10,14 +10,26 @@ body {
   box-sizing: border-box;
 }
 
-*::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background-color: var(--bg-color);
+  opacity: 0.1;
   display: none;
 }
-*::-webkit-scrollbar {
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-color);
+  border-radius: 5px;
+  opacity: 0.1;
   display: none;
 }
 
 *::-webkit-scrollbar-track {
+  background-color: var(--bg-color);
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+  opacity: 0.1;
   display: none;
 }
 
